added ProductService class & product component

--- a/frontend/angular-ecommerce/src/app/components/product-list/product-list.component.html
+++ b/frontend/angular-ecommerce/src/app/components/product-list/product-list.component.html
@@ -13,7 +13,7 @@
             <b>Price:</b> ${{product.unitPrice}} <br />
             <b>Unit In Stock:</b> {{product.unitInStock}} <br />
             <b>Active:</b> {{product.active}} <br />
-            <b>Product Image:</b> {{product.imageUrl}} <br />
+            <!-- <b>Product Image:</b> {{product.imageUrl}} <br /> -->
             <b>Created Date:</b> {{product.dateCreated | date}} <br />
             <b>Update Date:</b> {{product.dateUpdated}} <br />
           </p>
