added product items

--- a/frontend/angular-ecommerce/src/app/components/product-list/product-list.component.html
+++ b/frontend/angular-ecommerce/src/app/components/product-list/product-list.component.html
@@ -11,6 +11,7 @@
                  <a href="product-detail.html">
                    <img src="{{product.imageUrl}}" class="img-responsive">
                  </a>
+                 <p class="text-muted">SKU: {{product.sku}}</p>
                  <a href="product-detail.html">
                    <h1>{{product.name}}</h1>
                  </a>
