--- a/frontend/angular-ecommerce/src/app/components/product-list/product-list.component.html
+++ b/frontend/angular-ecommerce/src/app/components/product-list/product-list.component.html
@@ -1,31 +1,29 @@
-     <!-- MAIN CONTENT-->
+<!-- MAIN CONTENT-->
 
-     <div class="main-content">
-       <h1 class="text-danger">Products</h1>
-       <hr><br>
-       <div class="section-content section-content-p30">
-         <div class="container-fluid">
-           <div class="row">
-             <div class="col-md-3 col-xs-12" *ngFor="let product of products">
-               <div class="product-box">
-                 <a href="product-detail.html">
-                   <img src="{{product.imageUrl}}" class="img-responsive">
-                 </a>
-                 <p class="text-muted">SKU: {{product.sku}}</p>
-                 <a href="product-detail.html">
-                   <h1>{{product.name}}</h1>
-                 </a>
-                 <h2>{{product.description}}</h2>
-                 <div class="price">${{product.unitPrice}}</div>
-                 <a href="#" class="primary-btn">Add to cart</a>
+<div class="main-content">
+  <h1 class="text-danger">Products</h1>
+  <hr />
+  <br />
+  <div class="section-content section-content-p30">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-3 col-xs-12" *ngFor="let product of products">
+          <div class="product-box">
+            <a href="product-detail.html">
+              <img src="{{product.imageUrl}}" class="img-responsive" />
+            </a>
+            <p class="text-muted">SKU: {{product.sku}}</p>
+            <a href="product-detail.html">
+              <h1>{{product.name}}</h1>
+            </a>
+            <h2>{{product.description}}</h2>
+            <div class="price">${{product.unitPrice}}</div>
+            <a href="#" class="primary-btn">Add to cart</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
-               </div>
-
-             </div>
-
-           </div>
-         </div>
-       </div>
-     </div>
-
-     <!-- END MAIN CONTENT-->
+<!-- END MAIN CONTENT-->
