added product category search

--- a/frontend/angular-ecommerce/src/app/components/product-list/product-list.component.html
+++ b/frontend/angular-ecommerce/src/app/components/product-list/product-list.component.html
@@ -1,5 +1,4 @@
 <!-- MAIN CONTENT-->
-
 <div class="main-content">
   <h1 class="text-danger">Products</h1>
   <hr />
@@ -10,7 +9,11 @@
         <div class="col-md-3 col-xs-12" *ngFor="let product of products">
           <div class="product-box">
             <a href="product-detail.html">
-              <img src="{{product.imageUrl}}" class="img-responsive" />
+              <img
+                src="{{product.imageUrl}}"
+                class="img-responsive"
+                alt="{{product.name}}"
+              />
             </a>
             <p class="text-muted">SKU: {{product.sku}}</p>
             <a href="product-detail.html">
