--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,22 +1,35 @@
+<!-- <section class="container">
+  <h1 class="text-danger">Products</h1>
+  <hr />
+
+  <app-product-list></app-product-list>
+</section> -->
+
+
 <!-- Start of wrappte div -->
 <div class="page-wrapper">
+
   <!-- MENU SIDEBAR-->
   <aside class="menu-sidebar d-none d-lg-block">
     <div class="logo">
       <a href="#">
-        <img src="assets/images/logo.png" alt="logo" class="img-responsive" />
+        <img src="assets/images/logo.png" alt="logo" class="img-responsive">
       </a>
     </div>
     <div class="menu-sidebar-content js-scrollbar1">
       <nav class="navbar-sidebar">
         <ul class="list-unstyled navbar-list">
           <li>
-            <a routerLink="/category/1" routerLinkActive="active-link">Books</a>
+            <a href="#">Books</a>
           </li>
           <li>
-            <a routerLink="/category/2" routerLinkActive="active-link"
-              >Coffee Mugs</a
-            >
+            <a href="#">Coffee Mugs</a>
+          </li>
+          <li>
+            <a href="#">Mouse Pads</a>
+          </li>
+          <li>
+            <a href="#">Luggage Tags</a>
           </li>
         </ul>
       </nav>
@@ -33,20 +46,14 @@
         <div class="container-fluid">
           <div class="header-wrap">
             <form class="form-header" onsubmit="return false;" method="GET">
-              <input
-                class="au-input au-input-xl"
-                type="text"
-                name="search"
-                placeholder="Search for data ..."
-              />
+              <input class="au-input au-input-xl" type="text" name="search" placeholder="Search for data ..." />
               <button class="au-btn-submit" type="submit">
                 Search
               </button>
             </form>
             <div class="cart-area d-n">
               <a href="shopping-detail.html">
-                <div class="total">19.22 <span> 2</span></div>
-                <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                <div class="total">19.22 <span> 2</span> </div> <i class="fa fa-shopping-cart" aria-hidden="true"></i>
               </a>
             </div>
           </div>
@@ -60,14 +67,26 @@
 
   <!-- START OF MAIN CONTENT-->
   <section class="container" id="product-grid">
-    <!-- <app-product-list></app-product-list> -->
-
-    <router-outlet></router-outlet>
+    <app-product-list></app-product-list>
+    <!-- <app-product-grid></app-product-grid> -->
   </section>
 
   <!-- END OF MAIN CONTENT-->
-</div>
-<!-- START OF FOOTER SECTION-->
-<app-footer></app-footer>
-<!-- END OF FOOTER SECTION-->
-<!-- End of wrappte div -->
+
+  <!-- START OF FOOTER SECTION-->
+
+  <footer>
+    <ul>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Contact Us</a></li>
+      <li><a href="#">Help</a></li>
+    </ul>
+  </footer>
+  <!-- END OF FOOTER SECTION-->
+
+
+
+
+
+
+</div><!-- End of wrappte div -->
